# dugit

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  config.h
src/git/: CMakeLists.txt  git.cpp  git.h
src/include/: CMakeLists.txt  include.cpp  include.h
src/service/: CMakeLists.txt  service.h
src/session/: CMakeLists.txt  session.cpp  session.h
src/tests/: CMakeLists.txt  main.cpp  tests.cpp  tests.h
